🎨 style(main.css): add CSS rule to always display vertical scrollbar The CSS rule to always display the vertical scrollbar is added to prevent unwanted horizontal layout shifts. This issue can occur when loading a page with very short content after a page with long content. The new rule ensures a consistent user experience across different pages.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -68,6 +68,20 @@
 @layer base {
   /**
    * ---------------------------------------------------------------------------
+   * Scrollbar visibility
+   * ---------------------------------------------------------------------------
+   */
+
+  /* Always display the vertical scrollbar
+     This prevents unwanted horizontal layout shifts when loading a page with
+     very short content after a page with long content. */
+
+  html {
+    @apply overflow-y-scroll;
+  }
+
+  /**
+   * ---------------------------------------------------------------------------
    * Fluid font size and zoom effect
    * ---------------------------------------------------------------------------
    */
